TodoListAPI/k8s/base/main-deploy/database-ui/adminer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer-deployment
  labels:
    app: todolist
    component: database-ui
    environment: base
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todolist
      component: database-ui
      environment: base
  template:
    metadata:
      labels:
        app: todolist
        component: database-ui
        environment: base
    spec:
      containers:
        - name: todolist-adminer
          image: adminer
          ports:
            - containerPort: 8080
