TodoListAPI/k8s/base/main-deploy/database-ui/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-ui-svc
  labels:
    app: todolist
    environment: base
spec:
  type: NodePort
  selector:
    app: todolist
    component: database-ui
    environment: base
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30002
