TodoListAPI/k8s/base/main-deploy/database-ui/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: database-ui-ingress
  labels:
    app: todolist
    component: database-ui
    environment: base
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  ingressClassName: nginx
  rules:
    - host: database-ui.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: database-ui-svc
                port:
                  number: 80
